name:                tx
version:             0.1.0.0
synopsis:            Persistent transactions on top of STM
-- description:         
license:             MIT
license-file:        LICENSE
author:              Michael Schröder
maintainer:          mc.schroeder@gmail.com
copyright:           (c) 2013 Michael Schröder
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     TX
  -- other-modules:       
  
  build-depends:       base ==4.6.*
                     , bytestring ==0.10.*
                     , cereal ==0.3.*
                     , safecopy ==0.8.*
                     , stm ==2.4.*
                     , transformers ==0.3.*
  
  default-language:    Haskell2010  
  other-extensions:    TypeSynonymInstances
                     , LambdaCase
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , RecordWildCards
                     , TypeFamilies